<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joint_to_cartesian_controller</name>
  <version>1.0.0</version>
  <description>joint to cartesian controller</description>
  <maintainer email="songjiexiao@zju.edu.cn">Songjie Xiao</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>kdl_parser</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_kdl</depend>
  <depend>tf2</depend>
  <depend>urdf</depend>
  <depend>pluginlib</depend>
  <depend>generate_parameter_library</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
